--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Tic-Toc-Toe</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -10,7 +10,7 @@
       <p id="msg">Winner</p>
       <button id="new-btn">New Game</button>
     </div>
-    <h1>Tic-Toc-Toe</h1>
+    <h1>Tic-Tac-Toe</h1>
     <div class="container">
       <div class="game">
         <button class="box"></button>
